fix dnd flickering

--- a/src/style/taskItem.module.scss
+++ b/src/style/taskItem.module.scss
@@ -322,8 +322,8 @@ $primary-color: #fff8e1;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(95, 95, 95);
+  background-color: rgb(22, 22, 22);
   img {
-    max-width: 80vw;
+    max-width: 60vw;
   }
 }
